@@ -38,226 +38,236 @@ public class McpEvalTest {
   private McpAuditLog audit;
   private ToolRegistry registry;
 
-  @BeforeEach
-  void setUp() {
-    stub = new WebApiStub();
-    audit = new McpAuditLog();
-    McpSessionContext session =
-        new McpSessionContext(
-            Collections.emptySet(),
-            120,
-            EnumSet.of(GrantedCapabilities.BOOKMARKS, GrantedCapabilities.JOBS));
-    registry = new ToolRegistry(stub, audit, session);
-  }
+    @BeforeEach
+    void setUp() {
+        stub  = new WebApiStub();
+        audit = new McpAuditLog();
+        McpSessionContext session = new McpSessionContext(
+                Collections.emptySet(), 120,
+                EnumSet.of(GrantedCapabilities.BOOKMARKS, GrantedCapabilities.JOBS));
+        registry = new ToolRegistry(stub, audit, session);
+    }
 
-  // ── Tool surface ──────────────────────────────────────────────────────────
+    // ── Tool surface ──────────────────────────────────────────────────────────
 
-  @Test
-  void allExpectedToolsRegistered() {
-    Set<String> names = toolNames();
-    // Case lifecycle
-    assertContains(names, "iped_case_list", "iped_case_open", "iped_case_get", "iped_case_close");
-    // Search
-    assertContains(names, "iped_search");
-    // Document
-    assertContains(
-        names, "iped_item_get", "iped_item_preview", "iped_item_related", "iped_category_list");
-    // Bookmark — read + write (BOOKMARKS granted)
-    assertContains(
-        names,
-        "iped_bookmark_list",
-        "iped_bookmark_items",
-        "iped_bookmark_create",
-        "iped_bookmark_delete",
-        "iped_bookmark_rename",
-        "iped_bookmark_add_items",
-        "iped_bookmark_remove_items");
-    // Tag (BOOKMARKS granted)
-    assertContains(names, "iped_item_tag", "iped_item_untag");
-    // Jobs (JOBS granted)
-    assertContains(names, "iped_job_export", "iped_job_status", "iped_job_cancel");
+    @Test
+    void allExpectedToolsRegistered() {
+        Set<String> names = toolNames();
+        // Case lifecycle
+        assertContains(names, "iped_case_list", "iped_case_open", "iped_case_get", "iped_case_close");
+        // Search
+        assertContains(names, "iped_search");
+        // Document
+        assertContains(names, "iped_item_get", "iped_item_preview",
+                "iped_item_related", "iped_category_list");
+        // OSINT
+        assertContains(names, "iped_osint_plugin_list", "iped_osint_plugin_get",
+                "iped_osint_search", "iped_osint_result_list", "iped_osint_result_get");
+        // Bookmark — read + write (BOOKMARKS granted)
+        assertContains(names, "iped_bookmark_list", "iped_bookmark_items",
+                "iped_bookmark_create", "iped_bookmark_delete",
+                "iped_bookmark_rename", "iped_bookmark_add_items", "iped_bookmark_remove_items");
+        // Tag (BOOKMARKS granted)
+        assertContains(names, "iped_item_tag", "iped_item_untag");
+        // Jobs (JOBS granted)
+        assertContains(names, "iped_job_export", "iped_job_status", "iped_job_cancel");
 
-    // 4 + 1 + 4 + 7 + 2 + 3 = 21
-    assertEquals(21, names.size(), "Unexpected tool count: " + names);
-  }
+        // 4 + 1 + 4 + 5 + 7 + 2 + 3 = 26
+        assertEquals(26, names.size(), "Unexpected tool count: " + names);
+    }
 
-  @Test
-  void readOnlySessionHasNoWriteTools() {
-    McpSessionContext roSession = new McpSessionContext(Collections.emptySet(), 120);
-    var roReg = new ToolRegistry(stub, audit, roSession);
-    Set<String> names = Set.copyOf(roReg.tools().stream().map(s -> s.tool().name()).toList());
+    @Test
+    void readOnlySessionHasNoWriteTools() {
+        McpSessionContext roSession = new McpSessionContext(Collections.emptySet(), 120);
+        var roReg = new ToolRegistry(stub, audit, roSession);
+        Set<String> names = Set.copyOf(roReg.tools().stream()
+                .map(s -> s.tool().name()).toList());
 
-    // Read tools present
-    assertTrue(names.contains("iped_bookmark_list"));
-    assertTrue(names.contains("iped_search"));
-    // Write tools absent
-    assertFalse(names.contains("iped_bookmark_create"), "write tool should be absent");
-    assertFalse(names.contains("iped_item_tag"), "write tool should be absent");
-    assertFalse(names.contains("iped_job_export"), "write tool should be absent");
+        // Read tools present
+        assertTrue(names.contains("iped_bookmark_list"));
+        assertTrue(names.contains("iped_search"));
+        assertTrue(names.contains("iped_osint_plugin_list"));
+        // Write tools absent
+        assertFalse(names.contains("iped_bookmark_create"), "write tool should be absent");
+        assertFalse(names.contains("iped_item_tag"),        "write tool should be absent");
+        assertFalse(names.contains("iped_job_export"),      "write tool should be absent");
 
-    // 4 + 1 + 4 + 2 = 11
-    assertEquals(11, names.size(), "Unexpected read-only tool count: " + names);
-  }
+        // 4 + 1 + 4 + 5 + 2 = 16
+        assertEquals(16, names.size(), "Unexpected read-only tool count: " + names);
+    }
 
-  // ── Triage workflow ───────────────────────────────────────────────────────
+    // ── Triage workflow ───────────────────────────────────────────────────────
 
-  @Test
-  void step1_listCases() {
-    var result = invoke("iped_case_list", Map.of());
-    assertSuccess(result);
-    assertTrue(text(result).contains("demo-1"));
-    assertTrue(stub.calls.contains("listCases"));
-  }
+    @Test
+    void step1_listCases() {
+        var result = invoke("iped_case_list", Map.of());
+        assertSuccess(result);
+        assertTrue(text(result).contains("demo-1"));
+        assertTrue(stub.calls.contains("listCases"));
+    }
 
-  @Test
-  void step2_searchReturnsPageWithCursor() throws Exception {
-    var result = invoke("iped_search", Map.of("query", "bitcoin", "limit", 20));
-    assertSuccess(result);
-    JsonNode json = parse(result);
-    assertEquals(45, json.get("total").asInt());
-    assertEquals(20, json.get("limit").asInt());
-    assertEquals(20, json.get("items").size());
-    // 45 total, 20 fetched → nextCursor must be present
-    assertTrue(json.has("nextCursor"), "nextCursor missing in first page");
-  }
+    @Test
+    void step2_searchReturnsPageWithCursor() throws Exception {
+        var result = invoke("iped_search", Map.of("query", "bitcoin", "limit", 20));
+        assertSuccess(result);
+        JsonNode json = parse(result);
+        assertEquals(45, json.get("total").asInt());
+        assertEquals(20, json.get("limit").asInt());
+        assertEquals(20, json.get("items").size());
+        // 45 total, 20 fetched → nextCursor must be present
+        assertTrue(json.has("nextCursor"), "nextCursor missing in first page");
+    }
 
-  @Test
-  void step3_cursorNavigationFetchesNextPage() throws Exception {
-    var page1 = invoke("iped_search", Map.of("query", "drugs", "limit", 20));
-    assertSuccess(page1);
-    String cursor = parse(page1).get("nextCursor").asText();
-    assertNotNull(cursor);
-    assertFalse(cursor.isBlank());
+    @Test
+    void step3_cursorNavigationFetchesNextPage() throws Exception {
+        var page1 = invoke("iped_search", Map.of("query", "drugs", "limit", 20));
+        assertSuccess(page1);
+        String cursor = parse(page1).get("nextCursor").asText();
+        assertNotNull(cursor);
+        assertFalse(cursor.isBlank());
 
-    var page2 = invoke("iped_search", Map.of("cursor", cursor));
-    assertSuccess(page2);
-    JsonNode j2 = parse(page2);
-    assertEquals(20, j2.get("offset").asInt());
-    // limit=20, 45-20=25 remaining → capped at limit → 20 items returned
-    assertEquals(20, j2.get("items").size());
-    // offset=20+20=40 < 45, so nextCursor must be present
-    assertTrue(j2.has("nextCursor"));
+        var page2 = invoke("iped_search", Map.of("cursor", cursor));
+        assertSuccess(page2);
+        JsonNode j2 = parse(page2);
+        assertEquals(20, j2.get("offset").asInt());
+        // limit=20, 45-20=25 remaining → capped at limit → 20 items returned
+        assertEquals(20, j2.get("items").size());
+        // offset=20+20=40 < 45, so nextCursor must be present
+        assertTrue(j2.has("nextCursor"));
 
-    // page 3 via cursor from page 2
-    String cursor3 = j2.get("nextCursor").asText();
-    var page3 = invoke("iped_search", Map.of("cursor", cursor3));
-    assertSuccess(page3);
-    JsonNode j3 = parse(page3);
-    assertEquals(40, j3.get("offset").asInt());
-    assertEquals(5, j3.get("items").size()); // 45 - 40 = 5
-    assertFalse(j3.has("nextCursor"), "last page must not have nextCursor");
-  }
+        // page 3 via cursor from page 2
+        String cursor3 = j2.get("nextCursor").asText();
+        var page3 = invoke("iped_search", Map.of("cursor", cursor3));
+        assertSuccess(page3);
+        JsonNode j3 = parse(page3);
+        assertEquals(40, j3.get("offset").asInt());
+        assertEquals(5, j3.get("items").size()); // 45 - 40 = 5
+        assertFalse(j3.has("nextCursor"), "last page must not have nextCursor");
+    }
 
-  @Test
-  void step4_itemPreviewIsGuarded() {
-    var result = invoke("iped_item_preview", Map.of("itemId", "demo-1:7"));
-    assertSuccess(result);
-    String preview = text(result);
-    // EvidenceGuard must wrap the content
-    assertTrue(
-        preview.startsWith("<iped-evidence"),
-        "EvidenceGuard opening tag missing: "
-            + preview.substring(0, Math.min(50, preview.length())));
-    assertTrue(preview.endsWith("</iped-evidence>"), "EvidenceGuard closing tag missing");
-    // Evidence source attribution
-    assertTrue(preview.contains("source=\"demo-1\""));
-    // The original text must be present inside the guard
-    assertTrue(preview.contains("evidence text content"));
-  }
+    @Test
+    void step4_itemPreviewIsGuarded() {
+        var result = invoke("iped_item_preview", Map.of("itemId", "demo-1:7"));
+        assertSuccess(result);
+        String preview = text(result);
+        // EvidenceGuard must wrap the content
+        assertTrue(preview.startsWith("<iped-evidence"),
+                "EvidenceGuard opening tag missing: " + preview.substring(0, Math.min(50, preview.length())));
+        assertTrue(preview.endsWith("</iped-evidence>"),
+                "EvidenceGuard closing tag missing");
+        // Evidence source attribution
+        assertTrue(preview.contains("source=\"demo-1\""));
+        // The original text must be present inside the guard
+        assertTrue(preview.contains("evidence text content"));
+    }
 
-  @Test
-  void step5_tagItem() {
-    var result = invoke("iped_item_tag", Map.of("itemId", "demo-1:5", "tag", "relevant"));
-    assertSuccess(result);
-    assertTrue(text(result).contains("tagged"));
-    assertTrue(stub.calls.stream().anyMatch(c -> c.contains("tagItem") && c.contains("relevant")));
-  }
+    @Test
+    void step5_tagItem() {
+        var result = invoke("iped_item_tag", Map.of("itemId", "demo-1:5", "tag", "relevant"));
+        assertSuccess(result);
+        assertTrue(text(result).contains("tagged"));
+        assertTrue(stub.calls.stream().anyMatch(c -> c.contains("tagItem") && c.contains("relevant")));
+    }
 
-  @Test
-  void step6_submitAndPollExportJob() throws Exception {
-    var exportResult =
-        invoke("iped_job_export", Map.of("sourceId", "demo-1", "itemIds", List.of(5, 10, 15)));
-    assertSuccess(exportResult);
-    String jobId = parse(exportResult).get("jobId").asText();
-    assertEquals("job-abc-123", jobId);
-    assertTrue(stub.calls.contains("submitJob:export"));
+    @Test
+    void step6_submitAndPollExportJob() throws Exception {
+        var exportResult = invoke("iped_job_export",
+                Map.of("sourceId", "demo-1", "itemIds", List.of(5, 10, 15)));
+        assertSuccess(exportResult);
+        String jobId = parse(exportResult).get("jobId").asText();
+        assertEquals("job-abc-123", jobId);
+        assertTrue(stub.calls.contains("submitJob:export"));
 
-    var statusResult = invoke("iped_job_status", Map.of("jobId", jobId));
-    assertSuccess(statusResult);
-    JsonNode status = parse(statusResult);
-    assertEquals("running", status.get("status").asText());
-    assertEquals(50, status.get("progress").asInt());
-  }
+        var statusResult = invoke("iped_job_status", Map.of("jobId", jobId));
+        assertSuccess(statusResult);
+        JsonNode status = parse(statusResult);
+        assertEquals("running", status.get("status").asText());
+        assertEquals(50,        status.get("progress").asInt());
+    }
 
-  // ── Audit log coverage ────────────────────────────────────────────────────
+    @Test
+    void step7_osintSearchForItem() throws Exception {
+        var result = invoke("iped_osint_search", Map.of("sourceId", "demo-1", "itemId", 7));
+        assertSuccess(result);
+        JsonNode json = parse(result);
+        assertEquals("demo-1", json.get("sourceId").asText());
+        assertTrue(stub.calls.contains("searchOsint:demo-1"));
+    }
 
-  @Test
-  void auditLogCapturesEveryInvocation() {
-    // Run several tools
-    invoke("iped_case_list", Map.of());
-    invoke("iped_search", Map.of("query", "test", "limit", 5));
-    invoke("iped_item_tag", Map.of("itemId", "demo-1:1", "tag", "t1"));
-    invoke("iped_job_export", Map.of("sourceId", "demo-1", "itemIds", List.of(1)));
-    invoke("iped_job_status", Map.of("jobId", "job-abc-123"));
+    // ── Audit log coverage ───────────────────────────────────────────────────
 
-    // Stub call list proves the client was actually called for each tool
-    assertTrue(stub.calls.contains("listCases"), "listCases not called");
-    assertTrue(stub.calls.contains("search:test"), "search not called");
-    assertTrue(stub.calls.stream().anyMatch(c -> c.startsWith("tagItem")), "tagItem not called");
-    assertTrue(stub.calls.contains("submitJob:export"), "submitJob not called");
-    assertTrue(stub.calls.contains("getJob:job-abc-123"), "getJob not called");
-  }
+    @Test
+    void auditLogCapturesEveryInvocation() {
+        // Run several tools
+        invoke("iped_case_list",    Map.of());
+        invoke("iped_search",       Map.of("query", "test", "limit", 5));
+        invoke("iped_item_tag",     Map.of("itemId", "demo-1:1", "tag", "t1"));
+        invoke("iped_job_export",   Map.of("sourceId", "demo-1", "itemIds", List.of(1)));
+        invoke("iped_job_status",   Map.of("jobId", "job-abc-123"));
 
-  // ── Redaction ─────────────────────────────────────────────────────────────
+        // Stub call list proves the client was actually called for each tool
+        assertTrue(stub.calls.contains("listCases"),    "listCases not called");
+        assertTrue(stub.calls.contains("search:test"),  "search not called");
+        assertTrue(stub.calls.stream().anyMatch(c -> c.startsWith("tagItem")), "tagItem not called");
+        assertTrue(stub.calls.contains("submitJob:export"), "submitJob not called");
+        assertTrue(stub.calls.contains("getJob:job-abc-123"), "getJob not called");
+    }
 
-  @Test
-  void evidenceGuardCapsLargeText() {
-    // stub returns a short text; cap is 50k chars — cap is tested in EvidenceGuardTest.
-    // Here we just confirm the guard is applied even for short text.
-    var result = invoke("iped_item_preview", Map.of("itemId", "demo-1:99"));
-    assertSuccess(result);
-    String preview = text(result);
-    assertTrue(preview.contains("<iped-evidence"));
-    assertTrue(preview.contains("</iped-evidence>"));
-  }
+    // ── Redaction ─────────────────────────────────────────────────────────────
 
-  @Test
-  void invalidCursorReturnsError() {
-    var result = invoke("iped_search", Map.of("cursor", "not-valid-base64!!!"));
-    assertTrue(Boolean.TRUE.equals(result.isError()), "Expected error for invalid cursor");
-  }
+    @Test
+    void evidenceGuardCapsLargeText() {
+        // stub returns a short text; cap is 50k chars — cap is tested in EvidenceGuardTest.
+        // Here we just confirm the guard is applied even for short text.
+        var result = invoke("iped_item_preview", Map.of("itemId", "demo-1:99"));
+        assertSuccess(result);
+        String preview = text(result);
+        assertTrue(preview.contains("<iped-evidence"));
+        assertTrue(preview.contains("</iped-evidence>"));
+    }
 
-  // ── Helpers ───────────────────────────────────────────────────────────────
+    @Test
+    void invalidCursorReturnsError() {
+        var result = invoke("iped_search", Map.of("cursor", "not-valid-base64!!!"));
+        assertTrue(Boolean.TRUE.equals(result.isError()),
+                "Expected error for invalid cursor");
+    }
 
-  private McpSchema.CallToolResult invoke(String tool, Map<String, Object> args) {
-    return registry.tools().stream()
-        .filter(s -> tool.equals(s.tool().name()))
-        .findFirst()
-        .orElseThrow(() -> new AssertionError("Tool not found: " + tool))
-        .callHandler()
-        .apply(null, new McpSchema.CallToolRequest(tool, args));
-  }
+    // ── Helpers ───────────────────────────────────────────────────────────────
 
-  private Set<String> toolNames() {
-    return Set.copyOf(registry.tools().stream().map(s -> s.tool().name()).toList());
-  }
+    private McpSchema.CallToolResult invoke(String tool, Map<String, Object> args) {
+        return registry.tools().stream()
+                .filter(s -> tool.equals(s.tool().name()))
+                .findFirst()
+                .orElseThrow(() -> new AssertionError("Tool not found: " + tool))
+                .callHandler()
+                .apply(null, new McpSchema.CallToolRequest(tool, args));
+    }
 
-  private static void assertSuccess(McpSchema.CallToolResult result) {
-    assertFalse(Boolean.TRUE.equals(result.isError()), "Tool returned error: " + text(result));
-  }
+    private Set<String> toolNames() {
+        return Set.copyOf(registry.tools().stream()
+                .map(s -> s.tool().name())
+                .toList());
+    }
 
-  private static String text(McpSchema.CallToolResult result) {
-    if (result.content() == null || result.content().isEmpty()) return "";
-    return ((McpSchema.TextContent) result.content().get(0)).text();
-  }
+    private static void assertSuccess(McpSchema.CallToolResult result) {
+        assertFalse(Boolean.TRUE.equals(result.isError()),
+                "Tool returned error: " + text(result));
+    }
 
-  private static JsonNode parse(McpSchema.CallToolResult result) throws Exception {
-    return MAPPER.readTree(text(result));
-  }
+    private static String text(McpSchema.CallToolResult result) {
+        if (result.content() == null || result.content().isEmpty()) return "";
+        return ((McpSchema.TextContent) result.content().get(0)).text();
+    }
 
-  private static void assertContains(Set<String> set, String... names) {
-    for (String name : names) {
-      assertTrue(set.contains(name), "Missing tool: " + name);
+    private static JsonNode parse(McpSchema.CallToolResult result) throws Exception {
+        return MAPPER.readTree(text(result));
+    }
+
+    private static void assertContains(Set<String> set, String... names) {
+        for (String name : names) {
+            assertTrue(set.contains(name), "Missing tool: " + name);
+        }
     }
   }
 }
